<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_appBar"
...
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:elevation="0dp"
                app:layout_collapseMode="pin">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/appBar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:maxLines="1"
                    android:textStyle="bold"
...
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_fundmanager_title"
                tools:text="Órama" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_fundmanager_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="15dp"
...
