<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_settings"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/main_filter_menu_name"
        app:showAsAction="always" />
</menu>