...
            android:theme="@style/AppTheme"
            android:visibility="visible" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_fundos_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
